<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Microsoft Corporation. All rights reserved.
  ~ Licensed under the MIT License. See LICENSE in the project root for license information.
  -->

<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>

	<RelativeLayout
		android:id="@+id/es_content"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		>

		<Button
			android:id="@+id/es_cancelButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/es_cancel"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"
			style="@style/EmbeddedSocialSdkBottomButton"
			/>

		<Button
			android:id="@+id/es_deleteButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/es_delete"
			android:layout_alignParentBottom="true"
			android:layout_toLeftOf="@id/es_cancelButton"
			style="@style/EmbeddedSocialSdkBottomButton"
			/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:text="@string/es_delete_account_warning"
			android:layout_alignParentTop="true"
			/>

	</RelativeLayout>

	<include
		layout="@layout/es_progressbar"
		android:visibility="gone"
		/>
</FrameLayout>
